Domains into class names!

--- a/src/inject/inject.css
+++ b/src/inject/inject.css
@@ -1,7 +1,9 @@
 .csr-highlight {
-	/*border: solid 1px #d4ff2b;*/
 	background-color: #d4ff2b;
 }
 .csr-wikipedia {
 	background-color: #c9e3ff;
+}
+.csr-reddit {
+	background-color: #e6e1ff;
 }
